# StockLibrary

./: CMakeLists.txt  Candlestick.cpp  Candlestick.h  DataLoad.cpp  DataLoad.h  Oscillator.cpp  Oscillator.h  Trade.cpp  Trade.h  benchmark.cpp  benchmark.h  display.cpp  library.cpp  library.h  main.cpp  matplotlibcpp.h
include/: Candlestick.h  DataLoad.h  Oscillator.h  display.h
src/: Candlestick.cpp  DataLoad.cpp  Oscillator.cpp  Trade.cpp  benchmark.cpp  display.cpp
tests/: Candlestick_tests.cpp  Oscillator_tests.cpp  Trade_tests.cpp
